# ppmp

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD  Doxyfile  LICENSE  MODULE.bazel  README.md
.github/workflows/: build.yaml  build_clang.yaml  build_gcc.yaml  catch-unittest.yaml  clang-tidy-lint.yaml  doxygen-pages.yaml  formatting_check.yaml  integration-test.yaml
demo/: BUILD  demo.cpp  example.ppm  golden_example.ppm  instrumented_demo.cpp  tiny_demo.cpp
docs/: mainpage.md
ppmp/: BUILD  canvas_api.h  canvas_ppm_backend.h  data_saver.h  error.h  figure.h  file_handler.h  interfaces.h  rgb_color.h
test/: BUILD  data_saver_test.cpp  figure_test.cpp  integration_test.py
tools/code_utils/: BUILD  utils.h
tools/coverage/: BUILD  coverage.py  lcov.BUILD
tools/lint/: linters.bzl
